# my_trt_plugin

./: .gitignore  CMakeLists.txt  README.md
include/: infer_plugin.h
src/: CMakeLists.txt
src/plugins/: CMakeLists.txt  infer_plugin.cc
src/plugins/common/: layer_base.h
src/plugins/mat_mul_plugin/: CMakeLists.txt  mat_mul.cu  mat_mul.h  mat_mul_plugin.cc  mat_mul_plugin.h
test/: my_mat_mul_trt.py  tf_matmul_to_trt.py  torch_matmul_to_trt.py
