SET(TARGET_NAME zcc_plugin)
SET(SHARED_TARGET ${TARGET_NAME})
SET(STATIC_TARGET ${TARGET_NAME}_static)

SET(PLUGIN_LIST
        mat_mul_plugin)

SET(INFER_PLUGIN_SRC infer_plugin.cc)

SET(INFER_PLUGIN_LIB ${TENSORRT_LIBRARY})
FOREACH (PLUGIN_NAME ${PLUGIN_LIST})
    MESSAGE(STATUS "Adding plugin: ${PLUGIN_NAME}")
    ADD_SUBDIRECTORY(${PLUGIN_NAME})
    SET(INFER_PLUGIN_LIB ${INFER_PLUGIN_LIB} ${PLUGIN_NAME}_static)
ENDFOREACH ()
MESSAGE(STATUS "INFER_PLUGIN_LIB: ${INFER_PLUGIN_LIB}")

CUDA_ADD_LIBRARY(${SHARED_TARGET} SHARED ${INFER_PLUGIN_SRC})
TARGET_LINK_LIBRARIES(${SHARED_TARGET} ${INFER_PLUGIN_LIB})
TARGET_INCLUDE_DIRECTORIES(${SHARED_TARGET} PUBLIC ${CMAKE_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR})